# SimplePicoMidiController

./: BigBlinkingButton.cpp  CMakeLists.txt  README.md  SimplePicoMidiController.cpp  lwipopts.h  test.scd  usb_descriptors.c
.github/workflows/: build.yml
include/: DebounceButton.hpp
include/button/: button.c  button.h
